# learning-linters

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  times.py
.github/ISSUE_TEMPLATE/: reporting-security-issues-template.md
templates/: sentence_similarity.py  sentence_similarity_alt.py
