[tool.poetry]
name = "learning-linters"
version = "0.1.0"
description = "A project to learn linters on simple Python files."
authors = ["alexander todorovic <127629967+alexandertodorovic@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.4.1"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
